# Input

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt
Input/: BaseSettings.h  CMakeLists.txt  Constant.h  Input.h  MatrixSettings.h  ReadVectorMethod.h  StreamString.h  VectorSettings.h
InputTest/: CMakeLists.txt
InputTest/cmake_modules/: CodeCoverage.cmake
InputTest/tests/: CMakeLists.txt  ConstructorTest.cpp  EmplaceBackElementTest.cpp  EmplaceBackVectorIfNotEmptyTest.cpp  GetCharPositionTest.cpp  GetFileNameTest.cpp  GetSizeTest.cpp  IsEndOfLineTest.cpp  IsEndOfStreamTest.cpp  ReadArgumentsTest.cpp  ReadLineTest.cpp  ReadMatrixTemplateTest.cpp  ReadMatrixTest.cpp  ReadUntilCharactersTest.cpp  ReadUntilStringsTest.cpp  ReadVectorCharTest.cpp  ReadVectorTemplateTest.cpp  ReadVectorTemplateWithRulesTest.cpp  ReadVectorTest.cpp  ReadVectorWCharTest.cpp  ReadVectorWithTrueCharTest.cpp  ScanTest.cpp  SkipArgument.cpp  SkipArgumentTest.cpp  SkipArguments.cpp  SkipArgumentsTest.cpp  SkipCharactersTest.cpp  SkipLineTest.cpp  SkipLinesTest.cpp  SkipSymbolsTest.cpp  SkipUntilCharactersTest.cpp  SkipUntilStrings.cpp  SkipUntilStringsTest.cpp  SkipUntilSymbolsTest.cpp  TestHelper.h  VectorPushTest.cpp
StreamPosition/: StreamPosition.h
StreamPositionTest/: CMakeLists.txt
StreamPositionTest/cmake_modules/: CodeCoverage.cmake
StreamPositionTest/tests/: CMakeLists.txt  ConstructorTest.cpp  DecreaseColumnTest.cpp  DecreaseLineTest.cpp  EqualToOperatorTest.cpp  IncreaseColumnTest.cpp  IncreaseLineTest.cpp  NotEqualToOperatorTest.cpp  ResetColumnTest.cpp  SetColumnTest.cpp  SetLineTest.cpp  TestHelper.h
StreamString/: CMakeLists.txt  StreamString.h
StreamStringTest/: CMakeLists.txt
StreamStringTest/tests/: CMakeLists.txt  ConstructorTest.cpp
