CMAKE_MINIMUM_REQUIRED(VERSION 3.7)

SET(CMAKE_CXX_STANDARD 17)

SET(CMAKE_BUILD_TYPE Debug)

ADD_SUBDIRECTORY(googletest/googletest)

ADD_SUBDIRECTORY(StreamPosition)
ADD_SUBDIRECTORY(StreamPositionTest)

ADD_SUBDIRECTORY(StreamString)
ADD_SUBDIRECTORY(StreamStringTest)

ADD_SUBDIRECTORY(Input)
ADD_SUBDIRECTORY(InputTest)
